--- a/MaterialThemeBuilder/app/build.gradle
+++ b/MaterialThemeBuilder/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
 
     //MDC
     implementation 'com.google.android.material:material:1.2.0-alpha03'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 }
