--- a/MaterialThemeBuilder/app/build.gradle
+++ b/MaterialThemeBuilder/app/build.gradle
@@ -34,12 +34,13 @@ dependencies {
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-rc1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
+    implementation 'androidx.core:core-ktx:1.3.1'
 
     //MDC
-    implementation 'com.google.android.material:material:1.2.0-alpha03'
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
